[package]
name = "wair"
version = "0.0.0"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
description = "Windowing and Input for Rust"
repository = "https://github.com/Ralith/wair"
license = "Apache-2.0"
keywords = ["input"]

[features]
default = ["x11-backend", "evdev-backend"]
x11-backend = ["x11", "xcb", "xkbcommon"]
wayland-backend = ["wayland-client"]
evdev-backend = ["libudev-sys"]

[dependencies]
log = "0.3.6"
mio = "0.6.0"
tokio-core = "0.1"
futures = "0.1.1"
env_logger = "0.3.5"
libc = "0.2.0"
void = "1.0.2"

[target.'cfg(unix)'.dependencies]
x11 = { version = "2.11.0", optional = true, features = ["xinput"] }
xcb = { version = "0.7.5", optional = true, features = ["xlib_xcb"] }
xkbcommon = { version = "0.2.1", optional = true, features = ["x11"] }
wayland-client = { version = "0.6.2", optional = true }
libudev-sys = { version = "0.1.3", optional = true }
