[package]
name = "wai"
version = "0.1.1"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
description = "Windowing And Input"
repository = "https://github.com/Ralith/wair"
license = "Apache-2.0"
keywords = ["input", "window", "async", "futures", "tokio", "joystick"]
categories = ["api-bindings", "asynchronous", "game-engines", "os"]

[features]
default = ["x11-backend", "evdev-backend", "vulkano"]
x11-backend = ["x11", "xcb", "xkbcommon"]
evdev-backend = ["libudev-sys"]

[dependencies]
log = "0.3.6"
mio = "0.6.0"
tokio-core = "0.1"
futures = "0.1.1"
env_logger = "0.3.5"
libc = "0.2.0"
void = "1.0.2"
vulkano = { version = "0.3.1", optional = true }
x11 = { version = "2.11.0", optional = true, features = ["xinput"] }
xcb = { version = "0.7.5", optional = true, features = ["xlib_xcb"] }
xkbcommon = { version = "0.2.1", optional = true, features = ["x11"] }
libudev-sys = { version = "0.1.3", optional = true }
