[package]
name = "wai"
version = "0.2.0"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
description = "Wholesome Asynchronous Input"
repository = "https://github.com/Ralith/wair"
license = "Apache-2.0"
keywords = ["input", "async", "futures", "tokio", "joystick", "gamepad"]
categories = ["api-bindings", "asynchronous", "game-engines", "os"]

[features]
default = ["x11-backend"]
x11-backend = ["x11", "xcb", "xkbcommon"]

[dependencies]
log = "0.3.6"
mio = "0.6.0"
tokio-core = "0.1"
futures = "0.1.1"
env_logger = "0.3.5"
libc = "0.2.0"
void = "1.0.2"
error-chain = "0.10.0"

[target.'cfg(target_os = "linux")'.dependencies]
nix = "0.8.1"
libudev-sys = { version = "0.1.3" }
evdev = { git = "https://github.com/cmr/evdev" }
x11 = { version = "2.11.0", optional = true, features = ["xinput"] }
xcb = { version = "0.7.5", optional = true, features = ["xlib_xcb"] }
xkbcommon = { version = "0.2.1", optional = true, features = ["x11"] }
